[*] correct stiling. list items as links on portfolio page

--- a/css/styles.css
+++ b/css/styles.css
@@ -126,13 +126,16 @@ button {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02em;
   color: var(--navyblue);
 }
 
 .card-description {
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
+  color: var(--slate);
 }
 
 .main-text {
